<resources>
    <string name="app_name">LABS</string>
    <string name="titleApp">CEIS320 App</string>
    <string name="degFah">Degrees Fahrenheit</string>
    <string name="degCel">Degrees Celsius</string>
    <string name="degKel">Degrees Kelvin</string>
    <string name="tempChoose">Choose Your Temperature</string>
    <string name="convert">Convert</string>
    <string name="enterTemp">Please enter the temperature and select the correct units then press Convert:</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Welcome">Welcome to Trevizo App</string>
    <string name="goWeather">Convert\nTemp</string>
    <string name="goTicTacToe">Tic Tac Toe</string>
    <string name="goInfo">Info</string>
    <string name="goMusic">Favorite\nSong</string>
    <string name="goTakePic">Take\nPicture</string>
    <string name="goDraw">My\nDrawing</string>
    <string name="title_activity_my_drawing">MyDrawing</string>
</resources>