<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.labs.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2"
        android:useDefaultMargins="true" >
        <Button
            android:id="@+id/btnWeather"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goWeather" />
        <Button
            android:id="@+id/btnTicTacToe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goTicTacToe" />
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goInfo" />
        <Button
            android:id="@+id/btnSong"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goMusic" />
        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goTakePic" />
        <Button
            android:id="@+id/btnDraw"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goDraw" />
        </GridLayout>
</RelativeLayout>